--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  inapp_flutter_kyc: ^1.1.5
+  # inapp_flutter_kyc: ^1.1.5
+  google_mlkit_text_recognition: ^0.11.0
+  image_picker: ^1.0.7
+  image_filter_pro: ^0.1.10
 
 dev_dependencies:
   flutter_test:
